--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Lato:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&family=Sulamit:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&family=Dana:wght@400;700&display=swap');
 
 
 @tailwind base;
@@ -46,7 +46,7 @@
     --font-open-sans: 'Open Sans', sans-serif;
     --font-frank-ruhl-libre: 'Frank Ruhl Libre', serif;
     --font-heebo: 'Heebo', sans-serif;
-    --font-sulamit: 'Sulamit', cursive;
+    --font-dana: 'Dana', cursive;
 
     /* Dynamic Font Variables */
     --font-sans-family: var(--font-pt-sans);
